# convertible_bond_script

./: .gitignore  README.md  get_ths_data.py  main.py  main_old.py  main_quan.py  pyproject.toml  requirements.txt
.atomgit/workflows/: update_ths_token.yml
.github/workflows/: auto_bond.yml  get_ths_data.yml  push-to-gitee.yml
bondday/: __init__.py  bonddb.py
config/: csv.toml  setting.toml
config/demo/: bayesian_demo.toml  demo1.toml  test.toml
data/: 20180101.csv  20180102.csv  20180103.csv  20180104.csv  20180105.csv  20180108.csv  20180109.csv  20180110.csv  20180111.csv  20180112.csv  20180115.csv  20180116.csv  20180117.csv  20180118.csv  20180119.csv  20180122.csv  20180123.csv  20180124.csv  20180125.csv  20180126.csv  20180129.csv  20180130.csv  20180131.csv  20180201.csv  20180202.csv  20180205.csv  20180206.csv  20180207.csv  20180208.csv  20180209.csv  20180212.csv  20180213.csv  20180214.csv  20180216.csv  20180219.csv  20180221.csv  20180222.csv  20180223.csv  20180226.csv  20180227.csv  (+1864 more)
docs/: bayesian_fitting_guide.md  配置.md
frontend/: pnpm-lock.yaml
frontend/src/: App.vue  main.ts
frontend/src/components/: AppFooter.vue  AppHeader.vue
frontend/src/stores/: user.ts
frontend/src/utils/: request.ts
frontend/src/views/: LoginView.vue
iFinD/: __init__.py  encrypt.py
scripts/: get_ths_data.py  main_quan.py  update_ths_token.py
src/: bond_calc.py  demo1.py  main.py
src/bond/: bayesian_fitter.py  calc.py  dao.py
src/script/: index.py
ths/: encrypt.py
utils/: file_utils.py
