[project]
name = "convertible-bond"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chinese-calendar>=1.10.0",
    "duckdb>=1.2.1",
    "environs>=14.1.1",
    "fastapi>=0.115.11",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pycryptodomex>=3.22.0",
    "requests>=2.32.3",
    "toml>=0.10.2",
]
