[project]
name = "convertible-bond"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chinese-calendar>=1.10.0",
    "duckdb>=1.3.1",
    "environs>=14.2.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "pycryptodomex>=3.23.0",
    "requests>=2.32.4",
    "toml>=0.10.2",
]
